# pyzbar

./: pyproject.toml
